# mcp-nrepl-joyride

./: .gitignore  AI-CONTEXT.md  CLAUDE.md  MCP-NREPL-SERVER.md  MILESTONE-v0.5.0.md  PYTHON-INTEGRATION.md  README.md  basilisp_init.lpy  bb.edn  demo-enhanced-client.sh  git-mcp-requirements.md  joyride-mock-server.clj  main.py  mcp_nrepl_client.py  mcp_server_manager.py  pyproject.toml  run-integration-test.clj  scripts.sh  simple-python-nrepl.py  start-mcp-http-server.sh  start-mcp-server.sh  test-basilisp-server.py  test-joyride-integration.clj  test-nrepl-client.clj  test-nrepl-server.clj  test-python-connection.sh  test-real-joyride.clj  test_autodiscovery.py  test_mcp.clj  test_mcp_stdio.py
docs/: AI-ASSISTANT-MCP-COOKBOOK.md  CLOJURE-EXPLORATION-COOKBOOK.md  CLOJURE-TREESITTER-QUERIES.md  ENHANCED-MCP-CLIENT.md  HUMAN-DEVELOPER-MCP-COOKBOOK.md  NREPL-VS-LSP-COMPARISON.md  PYTHON-INTROSPECTION-COOKBOOK.md  PYTHON-INTROSPECTION-VIA-BASILISP.md  TREE-SITTER-CLOJURE-INTEGRATION-PLAN.md  TREE-SITTER-LSP-CAPABILITIES.md  VSCODE-JOYRIDE-MCP-COOKBOOK.md  babashka_mcp_nrepl_implementation_plan.md  claude_implementation_guide_ai_mcp_nrepl_vscode.md  claude_vscode_use_cases.md  comprehensive_clojure_mcp_analysis.md  lessons-learned.md  mcp-nrepl-arch-diagram.txt  nrepl-mcp-design-decisions.md  test-results.md  vscode-test-cases.md
examples/: flask_with_basilisp.py  python_introspection_utils.clj  python_utils_simple.clj  requirements.txt
src/mcp_nrepl_proxy/: core.clj  nrepl_client.clj
